# marklas

./: .gitignore  LICENSE  README.ja.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conversion-rules.md  llm-guide.md  mapping.md
specs/: README.md
src/marklas/: __init__.py  adf.py  ast.py  convert.py  schema.py  transform.py
src/marklas/adf/: __init__.py  parser.py  renderer.py  schema.py
src/marklas/ast/: blocks.py  inlines.py
src/marklas/md/: __init__.py  parser.py  renderer.py
src/marklas/nodes/: blocks.py  inlines.py
src/marklas/parser/: adf.py  md.py
src/marklas/renderer/: adf.py  md.py
tests/: test_ast.py  test_convert.py  test_transform.py
tests/adf/: test_parser.py  test_renderer.py  test_roundtrip.py
tests/md/: test_parser.py  test_renderer.py  test_roundtrip.py
tests/nodes/: test_nodes.py
tests/parser/: test_adf.py  test_md.py
tests/renderer/: test_adf.py  test_md.py
