[project]
name = "marklas"
version = "0.2.1"
description = "Bidirectional converter between GitHub Flavored Markdown and Atlassian Document Format"
readme = "README.md"
license = "MIT"
authors = [
    { name = "byExist", email = "jongbeom.kwon@gmail.com" }
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = ["mistune>=3.2"]

[project.optional-dependencies]
dev = [
    "black>=26.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
